--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,13 @@
 JWT_SECRET = mi_clave_secreta
-JWT_SECRET_EXPIRATION = 1h
+JWT_SECRET_EXPIRATION = 10h
 PORT = 3000
 
-DB_HOST=localhost
+DB_HOST=postgres  # Es el nombre del servicio de la base de datos en docker-compose 
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=parking_db
 DB_SYNC=true
+
+MONGODB_URI=mongodb://mongodb:27017/nest_parking_logs # Es el nombre del servicio de la base de datos (MongoDB) en docker-compose
+
